solc_mutator_ossfuzz_seed_corpus/test_solidity/test_b3c726ce911c055dac56a781014bbfd063981d6dffc33a877063e3c9655cee65_d2947acda727e9f17dc1c2d2421235974bef0421_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  modifier m0(bytes memory i0,uint256 i1) 
  {
    _;
  }
  error er0();
  type T0 is address;
  event ev0(bytes27  ep0) anonymous;
  error er1();
  function f0(function (bool) external   returns (L0.T0, function (int224, int144, bytes31) external   returns (int80, bytes4), address) i0) public  m0("aa2d3fb5a684c5844383581fae00cf8bd3eeee1db4c58275316042330bc251ae0000000000000000000000000000000000",((uint256(0) % (uint256(0) & uint256(94039953178756934208413508902675707108685977610274564690286496847390389896505))) << uint136(uint136(87112285931760246646623899502532662132735))))  returns(int208 o0,function () external   returns (bool, bytes4) o1)
  {
    emit ev0(bytes27(0x000000000000000000000000000000000000000000000000000000));
  }
  function f1(address payable i0,address payable i1) public  m0(bytes(string.concat("fffffffffffffffffffffffffffffffffffffffffffffff00dc0376ebc27c0", string("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffde61b32f5c44b51a8ff18c5fc84e794f0ba77a7b115ae4"))),uint256(0)) 
  {
    assembly
    {
      for 
      {
      }
      i0
      {
        i1 := shr(7990785226947404054148905118199485685080545457314672893316989288780893752792, 29211407074440006336494004870670939439816886443495292847980647142351294975369)
        let al0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
        pop(al0)
      }
      {
        if 115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
          for 
          {
          }
          113645745704613843161468804751746897708322560880703428004413331146581501717430
          {
          }
          {
            pop(53341511181035118961214512059042769938830885694912303157367661989532708925612)
            for 
            {
              let al1 := 51971349954144476229789449026118102709729461467171590443332860907875572322455
            }
            83059047459605803101841959186341078369261942640738588325367356775387572038946
            {
              let al2 := div(i0, 115792089237316195423570985008687907853269984665640564039457584007913129639935)
            }
            {
              continue
              pop(i1)
              i0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
              i0 := i1
            }
          }
        }
        i1 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
      }
      let al3 := smod(i0, 115626616696705614254727606656013719698513111776269035449742255767996272019758)
      switch i0
      case 0
      {
      }
      case 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
      }
      case 0
      {
      }
    }
    assembly
    {
      let al4 := i0
    }
  }
  modifier m1() 
  {
    _;
  }
}
pragma solidity >= 0.0.0;
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57
}
error er2(string ep0);
type T1 is int128;
// ----
// DeclarationError 6792: (su0.sol:2730-2752): Duplicate case "0" defined.
